# cobot_demo

./: CMakeLists.txt  README.md  demo_plugin.xml  package.xml
include/cobot_demo/: demo_panel.h  robot_commander.h  ui_panel.h
launch/: demo.launch.py
rviz/: view_robot.rviz
src/: aruco_node.cpp  demo_panel.cpp  robot_commander.cpp
ui/: form.ui
urdf/: gripper.ros2_control.xacro  gripper_macro.xacro  mycobot_320.srdf.xacro  mycobot_320.urdf  mycobot_320.urdf.xacro
urdf/meshes/: hdd_caddy.dae
urdf/meshes/collision/: gripper_base.dae
